--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ th, td { border: 1px solid #ccc; padding: 6px; text-align: center; }
 th { background: #eee; }
 .good { background: #c8f7c5; }
 .bad { background: #f7c5c5; }
-canvas { border:1px solid #000; margin-top:20px; }
+canvas { border:1px solid #000; margin-top:20px; display:block; }
+#graph { margin-top:20px; }
 </style>
 </head>
 <body>
@@ -45,8 +46,12 @@ canvas { border:1px solid #000; margin-top:20px; }
 </table>
 
 <canvas id="fieldMap" width="600" height="600"></canvas>
+<canvas id="graph" width="600" height="200"></canvas>
 
 <script>
+// -------------------------
+// Section & Run Data
+// -------------------------
 let sections = JSON.parse(localStorage.getItem("sections")) || [
   {name:"S1", distance:1},
   {name:"S2", distance:1},
@@ -56,7 +61,11 @@ let sections = JSON.parse(localStorage.getItem("sections")) || [
 let runs = JSON.parse(localStorage.getItem("runs")) || {};
 let startTime = null;
 let interval = null;
+let liveTimes = [];
 
+// -------------------------
+// Sections UI
+// -------------------------
 function saveSections() {
   localStorage.setItem("sections", JSON.stringify(sections));
   renderSections();
@@ -78,11 +87,20 @@ function renderSections() {
   });
 }
 
+// -------------------------
+// Run Control
+// -------------------------
 function startRun() {
   startTime = performance.now();
+  liveTimes = [];
   interval = setInterval(()=>{
-    document.getElementById("timer").innerText =
-      "Time: " + ((performance.now()-startTime)/1000).toFixed(2) + " s";
+    let elapsed = (performance.now()-startTime)/1000;
+    document.getElementById("timer").innerText = "Time: " + elapsed.toFixed(2) + " s";
+
+    // simulate live section times evenly for demo purposes
+    let sectionTime = elapsed / sections.length;
+    liveTimes = Array(sections.length).fill(sectionTime);
+    drawSpeedGraph(liveTimes);
   },50);
 }
 
@@ -92,33 +110,42 @@ function stopRun() {
   recordRun(totalTime);
 }
 
+// -------------------------
+// Record Run
+// -------------------------
 function recordRun(totalTime) {
   const mode = document.getElementById("mode").value;
   runs[mode] = runs[mode] || [];
 
-  // divide time evenly per section (for simplicity)
-  let runData = sections.map(s => ({
-    time: totalTime / sections.length,
-    speed: s.distance / (totalTime / sections.length)
-  }));
+  let runData = sections.map(s => {
+    let t = totalTime / sections.length;
+    return {time: t, speed: s.distance / t};
+  });
 
   runs[mode].push(runData);
   localStorage.setItem("runs", JSON.stringify(runs));
   renderTable();
   drawFieldMap();
+  drawSpeedGraph(runData.map(r=>r.speed));
 }
 
+// -------------------------
+// Load Data
+// -------------------------
 function loadData() {
   runs = JSON.parse(localStorage.getItem("runs")) || {};
   renderTable();
   drawFieldMap();
 }
 
+// -------------------------
+// Table Rendering
+// -------------------------
 function renderTable() {
   const mode = document.getElementById("mode").value;
   const table = document.getElementById("table");
   table.innerHTML = "<tr><th>Run</th>";
-  sections.forEach(s => table.innerHTML += `<th>${s.name}<br>(t/s)</th>`);
+  sections.forEach(s => table.innerHTML += `<th>${s.name}<br>(t / s)</th>`);
   table.innerHTML += "<th>Total</th></tr>";
 
   let best = sections.map(()=>Infinity);
@@ -140,34 +167,35 @@ function renderTable() {
   });
 }
 
+// -------------------------
+// Field Map Drawing
+// -------------------------
 function drawFieldMap() {
   const canvas = document.getElementById("fieldMap");
   const ctx = canvas.getContext("2d");
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  // Draw simplified Push Back field
+  // Field background
   ctx.fillStyle = "#f0f0f0";
   ctx.fillRect(0,0,canvas.width,canvas.height);
 
-  // field walls (example)
+  // Field boundary
   ctx.strokeStyle="#000";
   ctx.lineWidth=2;
   ctx.strokeRect(20,20,560,560);
 
   const mode = document.getElementById("mode").value;
   const runData = (runs[mode]||[]).slice(-1)[0]; // last run
-
   if(!runData) return;
 
-  // Predefined curved path points for realistic Push Back path
+  // Predefined curved points
   let points = [
-    {x:50,y:550}, // Start
-    {x:200,y:450}, // Curve to wall
-    {x:400,y:400}, // Push block
-    {x:550,y:550}  // Return
+    {x:50,y:550}, 
+    {x:200,y:450},
+    {x:400,y:400},
+    {x:550,y:550}
   ];
 
-  // adjust points if number of sections != points.length
   if(sections.length != points.length){
     points = [];
     for(let i=0;i<sections.length;i++){
@@ -176,14 +204,13 @@ function drawFieldMap() {
     }
   }
 
-  // draw sections as curves with color
+  // Draw curved sections
   for(let i=0;i<points.length-1;i++){
     const s = runData[i];
     const color = s.time <= Math.min(...runData.map(r=>r.time)) ? "green" : "red";
     ctx.strokeStyle = color;
     ctx.lineWidth = 6;
 
-    // quadratic curve for more realistic path
     ctx.beginPath();
     ctx.moveTo(points[i].x, points[i].y);
     const cx = (points[i].x + points[i+1].x)/2;
@@ -192,7 +219,7 @@ function drawFieldMap() {
     ctx.stroke();
   }
 
-  // mark points
+  // Section points
   points.forEach((p,i)=>{
     ctx.fillStyle="black";
     ctx.beginPath();
@@ -202,14 +229,58 @@ function drawFieldMap() {
   });
 }
 
-// Initial render
+// -------------------------
+// Live Speed Graph
+// -------------------------
+function drawSpeedGraph(speeds) {
+  const canvas = document.getElementById("graph");
+  const ctx = canvas.getContext("2d");
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  if(!speeds || speeds.length===0) return;
+
+  const maxSpeed = Math.max(...speeds)*1.2;
+  const widthPerSection = canvas.width / speeds.length;
+
+  ctx.beginPath();
+  ctx.moveTo(0,canvas.height - (speeds[0]/maxSpeed)*canvas.height);
+
+  for(let i=0;i<speeds.length;i++){
+    let x = i*widthPerSection + widthPerSection/2;
+    let y = canvas.height - (speeds[i]/maxSpeed)*canvas.height;
+    ctx.lineTo(x,y);
+  }
+
+  ctx.strokeStyle="blue";
+  ctx.lineWidth=2;
+  ctx.stroke();
+
+  // Draw speed points
+  for(let i=0;i<speeds.length;i++){
+    let x = i*widthPerSection + widthPerSection/2;
+    let y = canvas.height - (speeds[i]/maxSpeed)*canvas.height;
+    ctx.fillStyle="red";
+    ctx.beginPath();
+    ctx.arc(x,y,4,0,2*Math.PI);
+    ctx.fill();
+    ctx.fillText(speeds[i].toFixed(2),x-10,y-10);
+  }
+
+  // Axis
+  ctx.strokeStyle="black";
+  ctx.lineWidth=1;
+  ctx.beginPath();
+  ctx.moveTo(0,canvas.height);
+  ctx.lineTo(canvas.width,canvas.height);
+  ctx.stroke();
+}
+
+// -------------------------
+// Initial Render
+// -------------------------
 renderSections();
 loadData();
 </script>
 
 </body>
 </html>
-
-<table id="table">
-<tr><th>Run</th></tr>
-</table>
