--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ th, td { border: 1px solid #ccc; padding: 6px; text-align: center; }
 th { background: #eee; }
 .good { background: #c8f7c5; }
 .bad { background: #f7c5c5; }
-canvas { border:1px solid #000; margin-top:20px; display:block; }
-#fieldContainer { position: relative; width: 600px; height: 600px; }
+#fieldContainer { position: relative; width: 600px; height: 600px; margin-top: 20px; }
 #fieldImage { width: 100%; height: 100%; }
 #fieldCanvas { position: absolute; top:0; left:0; }
 </style>
@@ -36,16 +35,18 @@ canvas { border:1px solid #000; margin-top:20px; display:block; }
 <hr>
 
 <h3>Run Control</h3>
-<p>Current Section: <span id="currentSection">None</span></p>
-<button onclick="startSection()">Start Section</button>
-<button onclick="stopSection()">Stop Section</button>
+<label>Select Section:</label>
+<select id="sectionSelect"></select>
 
-<p id="timer">Time: 0.00 s</p>
+<button onclick="startTiming()">Start</button>
+<button onclick="stopTiming()">Stop</button>
+
+<p id="timerDisplay">Time: 0.00 s</p>
 
 <hr>
 
 <table id="table">
-<tr><th>Section</th></tr>
+<tr><th>Section</th><th>Current</th><th>Delta vs Best</th><th>Increase</th><th>Decrease</th><th>Speed</th></tr>
 </table>
 
 <h3>Field Map (Push Back)</h3>
@@ -56,9 +57,9 @@ canvas { border:1px solid #000; margin-top:20px; display:block; }
 <button onclick="clearPath()">Clear Path</button>
 
 <script>
-// -------------------------
-// Section & Run Data
-// -------------------------
+// ---------------------------
+// Data Storage
+// ---------------------------
 let sections = JSON.parse(localStorage.getItem("sections")) || [
   {name:"Start", distance:1},
   {name:"Approach Wall", distance:1},
@@ -69,27 +70,27 @@ let sections = JSON.parse(localStorage.getItem("sections")) || [
 let runs = JSON.parse(localStorage.getItem("runs")) || {};
 let startTime = null;
 let interval = null;
-let currentSectionIndex = 0;
-let currentRun = [];
+let currentTimes = [];
 let path = JSON.parse(localStorage.getItem("path")) || [];
 
-// -------------------------
+// ---------------------------
 // Sections UI
-// -------------------------
-function saveSections() {
+// ---------------------------
+function saveSections(){
   localStorage.setItem("sections", JSON.stringify(sections));
   renderSections();
+  populateSectionDropdown();
 }
 
-function addSection() {
+function addSection(){
   sections.push({name:"S"+(sections.length+1), distance:1});
   saveSections();
 }
 
-function renderSections() {
+function renderSections(){
   const div = document.getElementById("sections");
   div.innerHTML = "";
-  sections.forEach((s,i)=>{
+  sections.forEach((s,i) => {
     div.innerHTML += `
       Name: <input value="${s.name}" onchange="sections[${i}].name=this.value;saveSections()">
       Distance: <input type="number" step="0.01" value="${s.distance}" onchange="sections[${i}].distance=parseFloat(this.value);saveSections()">
@@ -97,100 +98,104 @@ function renderSections() {
   });
 }
 
-// -------------------------
-// Section Timing
-// -------------------------
-function startSection() {
-  if(currentSectionIndex >= sections.length){
-    alert("All sections completed! Reset to start new run.");
-    return;
-  }
-  startTime = performance.now();
-  interval = setInterval(()=>{
-    let elapsed = (performance.now()-startTime)/1000;
-    document.getElementById("timer").innerText = "Time: " + elapsed.toFixed(2) + " s";
-    document.getElementById("currentSection").innerText = sections[currentSectionIndex].name;
-  },50);
+function populateSectionDropdown(){
+  const sel = document.getElementById("sectionSelect");
+  sel.innerHTML = "";
+  sections.forEach((s, i) => {
+    sel.innerHTML += `<option value="${i}">${s.name}</option>`;
+  });
 }
 
-function stopSection() {
+// ---------------------------
+// Timing Control
+// ---------------------------
+function startTiming(){
+  startTime = performance.now();
+  document.getElementById("timerDisplay").innerText = "Time: 0.00 s";
+  interval = setInterval(()=>{
+    let elapsed = (performance.now() - startTime)/1000;
+    document.getElementById("timerDisplay").innerText = "Time: " + elapsed.toFixed(2) + " s";
+  }, 50);
+}
+
+function stopTiming(){
   if(startTime === null){
-    alert("Start the section first!");
+    alert("Click Start first!");
     return;
   }
   clearInterval(interval);
-  let sectionTime = (performance.now() - startTime)/1000;
-  let s = sections[currentSectionIndex];
-  currentRun.push({name:s.name, time:sectionTime, speed: s.distance/sectionTime});
-  currentSectionIndex++;
+  let elapsed = (performance.now() - startTime)/1000;
+  const secIndex = document.getElementById("sectionSelect").value;
+  const sdata = sections[secIndex];
+  currentTimes[secIndex] = {time: elapsed, speed: sdata.distance/elapsed};
+
   startTime = null;
-  document.getElementById("timer").innerText = "Time: 0.00 s";
-  document.getElementById("currentSection").innerText = currentSectionIndex<sections.length?sections[currentSectionIndex].name:"All sections done!";
-  if(currentSectionIndex >= sections.length){
-    saveRun();
-  }
+  renderTable();
+  saveRunIfComplete();
 }
 
-// -------------------------
-// Save full run
-// -------------------------
-function saveRun(){
-  const mode = document.getElementById("mode").value;
-  runs[mode] = runs[mode] || [];
-  runs[mode].push(currentRun);
-  localStorage.setItem("runs", JSON.stringify(runs));
-  currentRun = [];
-  currentSectionIndex = 0;
+// ---------------------------
+// Save Run
+// ---------------------------
+function saveRunIfComplete(){
+  if(Object.keys(currentTimes).length === sections.length && currentTimes.every(x => x)){
+    const mode = document.getElementById("mode").value;
+    runs[mode] = runs[mode] || [];
+    runs[mode].push(currentTimes);
+    localStorage.setItem("runs", JSON.stringify(runs));
+    currentTimes = [];
+  }
   renderTable();
 }
 
-// -------------------------
+// ---------------------------
 // Load Data
-// -------------------------
-function loadData() {
+// ---------------------------
+function loadData(){
   runs = JSON.parse(localStorage.getItem("runs")) || {};
+  currentTimes = [];
   renderTable();
   drawPath();
 }
 
-// -------------------------
+// ---------------------------
 // Table Rendering
-// -------------------------
-function renderTable() {
+// ---------------------------
+function renderTable(){
   const mode = document.getElementById("mode").value;
   const table = document.getElementById("table");
   table.innerHTML = "<tr><th>Section</th><th>Current</th><th>Delta vs Best</th><th>Increase</th><th>Decrease</th><th>Speed</th></tr>";
 
   let best = sections.map(()=>Infinity);
-  (runs[mode]||[]).forEach(run => run.forEach((s,i)=>best[i]=Math.min(best[i],s.time)));
+  (runs[mode]||[]).forEach(run => run.forEach((s,i) => best[i] = Math.min(best[i], s.time)));
 
   const lastRun = (runs[mode]||[]).slice(-1)[0];
   if(!lastRun) return;
 
-  lastRun.forEach((s,i)=>{
+  lastRun.forEach((s,i) => {
     let row = table.insertRow();
-    row.insertCell().innerText = s.name;
+    row.insertCell().innerText = sections[i].name;
     row.insertCell().innerText = s.time.toFixed(2);
     let delta = s.time - best[i];
     row.insertCell().innerText = delta.toFixed(2);
-    row.insertCell().innerText = i>0 ? Math.max(0,s.time - lastRun[i-1].time).toFixed(2) : "-";
-    row.insertCell().innerText = i>0 ? Math.max(0,lastRun[i-1].time - s.time).toFixed(2) : "-";
+    row.insertCell().innerText = i>0 ? Math.max(0, s.time - lastRun[i-1].time).toFixed(2) : "-";
+    row.insertCell().innerText = i>0 ? Math.max(0, lastRun[i-1].time - s.time).toFixed(2) : "-";
     row.insertCell().innerText = s.speed.toFixed(2);
-    row.cells[2].className = delta<=0?"good":"bad";
+    row.cells[2].className = delta<=0 ? "good" : "bad";
   });
 }
 
-// -------------------------
+// ---------------------------
 // Field Path Drawing
-// -------------------------
+// ---------------------------
 const canvas = document.getElementById("fieldCanvas");
 const ctx = canvas.getContext("2d");
 let drawing = false;
 
-canvas.addEventListener("mousedown", e=>{ drawing=true; addPoint(e); });
-canvas.addEventListener("mousemove", e=>{ if(drawing) addPoint(e); });
-canvas.addEventListener("mouseup", e=>{ drawing=false; savePath(); });
-canvas.addEventListener("mouseleave", e=>{ drawing=false; savePath(); });
+canvas.addEventListener("mousedown", e => { drawing = true; addPoint(e); });
+canvas.addEventListener("mousemove", e => { if(drawing) addPoint(e); });
+canvas.addEventListener("mouseup", e => { drawing = false; savePath(); });
+canvas.addEventListener("mouseleave", e => { drawing = false; savePath(); });
 
 function addPoint(e){
   const rect = canvas.getBoundingClientRect();
@@ -202,10 +207,10 @@ function addPoint(e){
 
 function drawPath(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  ctx.strokeStyle="blue";
-  ctx.lineWidth=3;
+  ctx.strokeStyle = "blue";
+  ctx.lineWidth = 3;
   ctx.beginPath();
-  path.forEach((p,i)=>{
+  path.forEach((p,i) => {
     if(i===0) ctx.moveTo(p.x,p.y);
     else ctx.lineTo(p.x,p.y);
   });
@@ -213,19 +218,20 @@ function drawPath(){
 }
 
 function clearPath(){
-  path=[];
+  path = [];
   drawPath();
-  localStorage.setItem("path",JSON.stringify(path));
+  localStorage.setItem("path", JSON.stringify(path));
 }
 
 function savePath(){
-  localStorage.setItem("path",JSON.stringify(path));
+  localStorage.setItem("path", JSON.stringify(path));
 }
 
-// -------------------------
+// ---------------------------
 // Init
-// -------------------------
+// ---------------------------
 renderSections();
+populateSectionDropdown();
 loadData();
 </script>
 
