--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ th { background: #eee; }
 .good { background: #c8f7c5; }
 .bad { background: #f7c5c5; }
 #fieldContainer { position: relative; width: 600px; height: 600px; margin-top: 20px; }
-#fieldImage { width: 100%; height: 100%; }
+#fieldImage { width: 100%; height: 100%; display:block; }
 #fieldCanvas { position: absolute; top:0; left:0; }
 </style>
 </head>
@@ -38,8 +38,8 @@ th { background: #eee; }
 <label>Select Section:</label>
 <select id="sectionSelect"></select>
 
-<button onclick="startTiming()">Start</button>
-<button onclick="stopTiming()">Stop</button>
+<button onclick="startSection()">Start</button>
+<button onclick="stopSection()">Stop</button>
 
 <p id="timerDisplay">Time: 0.00 s</p>
 
@@ -58,7 +58,7 @@ th { background: #eee; }
 
 <script>
 // ---------------------------
-// Data Storage
+// Data
 // ---------------------------
 let sections = JSON.parse(localStorage.getItem("sections")) || [
   {name:"Start", distance:1},
@@ -70,7 +70,7 @@ let sections = JSON.parse(localStorage.getItem("sections")) || [
 let runs = JSON.parse(localStorage.getItem("runs")) || {};
 let startTime = null;
 let interval = null;
-let currentTimes = [];
+let currentRun = {}; // store section index -> {time,speed}
 let path = JSON.parse(localStorage.getItem("path")) || [];
 
 // ---------------------------
@@ -90,9 +90,8 @@ function addSection(){
 function renderSections(){
   const div = document.getElementById("sections");
   div.innerHTML = "";
-  sections.forEach((s,i) => {
-    div.innerHTML += `
-      Name: <input value="${s.name}" onchange="sections[${i}].name=this.value;saveSections()">
+  sections.forEach((s,i)=>{
+    div.innerHTML += `Name: <input value="${s.name}" onchange="sections[${i}].name=this.value;saveSections()">
       Distance: <input type="number" step="0.01" value="${s.distance}" onchange="sections[${i}].distance=parseFloat(this.value);saveSections()">
       <br>`;
   });
@@ -101,51 +100,50 @@ function renderSections(){
 function populateSectionDropdown(){
   const sel = document.getElementById("sectionSelect");
   sel.innerHTML = "";
-  sections.forEach((s, i) => {
+  sections.forEach((s,i)=>{
     sel.innerHTML += `<option value="${i}">${s.name}</option>`;
   });
 }
 
 // ---------------------------
-// Timing Control
+// Timing
 // ---------------------------
-function startTiming(){
+function startSection(){
+  if(startTime!==null){ alert("Timer already running!"); return; }
   startTime = performance.now();
-  document.getElementById("timerDisplay").innerText = "Time: 0.00 s";
   interval = setInterval(()=>{
     let elapsed = (performance.now() - startTime)/1000;
     document.getElementById("timerDisplay").innerText = "Time: " + elapsed.toFixed(2) + " s";
-  }, 50);
+  },50);
 }
 
-function stopTiming(){
-  if(startTime === null){
-    alert("Click Start first!");
-    return;
-  }
+function stopSection(){
+  if(startTime===null){ alert("Click Start first!"); return; }
   clearInterval(interval);
   let elapsed = (performance.now() - startTime)/1000;
-  const secIndex = document.getElementById("sectionSelect").value;
-  const sdata = sections[secIndex];
-  currentTimes[secIndex] = {time: elapsed, speed: sdata.distance/elapsed};
-
+  const idx = document.getElementById("sectionSelect").value;
+  currentRun[idx] = {time: elapsed, speed: sections[idx].distance / elapsed};
   startTime = null;
+  document.getElementById("timerDisplay").innerText = "Time: 0.00 s";
   renderTable();
   saveRunIfComplete();
 }
 
 // ---------------------------
-// Save Run
+// Save run if all sections done
 // ---------------------------
 function saveRunIfComplete(){
-  if(Object.keys(currentTimes).length === sections.length && currentTimes.every(x => x)){
+  if(Object.keys(currentRun).length === sections.length){
     const mode = document.getElementById("mode").value;
     runs[mode] = runs[mode] || [];
-    runs[mode].push(currentTimes);
+    let runArray = [];
+    for(let i=0;i<sections.length;i++){
+      runArray.push(currentRun[i]);
+    }
+    runs[mode].push(runArray);
     localStorage.setItem("runs", JSON.stringify(runs));
-    currentTimes = [];
+    currentRun = {};
   }
-  renderTable();
 }
 
 // ---------------------------
@@ -153,7 +151,7 @@ function saveRunIfComplete(){
 // ---------------------------
 function loadData(){
   runs = JSON.parse(localStorage.getItem("runs")) || {};
-  currentTimes = [];
+  currentRun = {};
   renderTable();
   drawPath();
 }
@@ -167,12 +165,12 @@ function renderTable(){
   table.innerHTML = "<tr><th>Section</th><th>Current</th><th>Delta vs Best</th><th>Increase</th><th>Decrease</th><th>Speed</th></tr>";
 
   let best = sections.map(()=>Infinity);
-  (runs[mode]||[]).forEach(run => run.forEach((s,i) => best[i] = Math.min(best[i], s.time)));
+  (runs[mode]||[]).forEach(run => run.forEach((s,i)=>best[i] = Math.min(best[i], s.time)));
 
   const lastRun = (runs[mode]||[]).slice(-1)[0];
   if(!lastRun) return;
 
-  lastRun.forEach((s,i) => {
+  lastRun.forEach((s,i)=>{
     let row = table.insertRow();
     row.insertCell().innerText = sections[i].name;
     row.insertCell().innerText = s.time.toFixed(2);
@@ -181,21 +179,21 @@ function renderTable(){
     row.insertCell().innerText = i>0 ? Math.max(0, s.time - lastRun[i-1].time).toFixed(2) : "-";
     row.insertCell().innerText = i>0 ? Math.max(0, lastRun[i-1].time - s.time).toFixed(2) : "-";
     row.insertCell().innerText = s.speed.toFixed(2);
-    row.cells[2].className = delta<=0 ? "good" : "bad";
+    row.cells[2].className = delta<=0?"good":"bad";
   });
 }
 
 // ---------------------------
-// Field Path Drawing
+// Field Path
 // ---------------------------
 const canvas = document.getElementById("fieldCanvas");
 const ctx = canvas.getContext("2d");
-let drawing = false;
+let drawing=false;
 
-canvas.addEventListener("mousedown", e => { drawing = true; addPoint(e); });
-canvas.addEventListener("mousemove", e => { if(drawing) addPoint(e); });
-canvas.addEventListener("mouseup", e => { drawing = false; savePath(); });
-canvas.addEventListener("mouseleave", e => { drawing = false; savePath(); });
+canvas.addEventListener("mousedown", e=>{drawing=true; addPoint(e);});
+canvas.addEventListener("mousemove", e=>{if(drawing)addPoint(e);});
+canvas.addEventListener("mouseup", e=>{drawing=false; savePath();});
+canvas.addEventListener("mouseleave", e=>{drawing=false; savePath();});
 
 function addPoint(e){
   const rect = canvas.getBoundingClientRect();
@@ -207,24 +205,21 @@ function addPoint(e){
 
 function drawPath(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  ctx.strokeStyle = "blue";
-  ctx.lineWidth = 3;
+  ctx.strokeStyle="blue";
+  ctx.lineWidth=3;
   ctx.beginPath();
-  path.forEach((p,i) => {
-    if(i===0) ctx.moveTo(p.x,p.y);
-    else ctx.lineTo(p.x,p.y);
-  });
+  path.forEach((p,i)=>{if(i===0)ctx.moveTo(p.x,p.y);else ctx.lineTo(p.x,p.y);});
   ctx.stroke();
 }
 
 function clearPath(){
-  path = [];
+  path=[];
   drawPath();
-  localStorage.setItem("path", JSON.stringify(path));
+  localStorage.setItem("path",JSON.stringify(path));
 }
 
 function savePath(){
-  localStorage.setItem("path", JSON.stringify(path));
+  localStorage.setItem("path",JSON.stringify(path));
 }
 
 // ---------------------------
