--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ th, td { border: 1px solid #ccc; padding: 6px; text-align: center; }
 th { background: #eee; }
 .good { background: #c8f7c5; }
 .bad { background: #f7c5c5; }
+.deleteBtn { cursor: pointer; color: red; font-weight: bold; }
 #fieldContainer { position: relative; width: 600px; height: 600px; margin-top: 20px; }
 #fieldImage { width: 100%; height: 100%; display:block; }
 #fieldCanvas { position: absolute; top:0; left:0; }
@@ -37,21 +38,22 @@ th { background: #eee; }
 <h3>Run Control</h3>
 <label>Select Section:</label>
 <select id="sectionSelect"></select>
-
 <button onclick="startSection()">Start</button>
 <button onclick="stopSection()">Stop</button>
-
 <p id="timerDisplay">Time: 0.00 s</p>
 
 <hr>
 
 <table id="table">
-<tr><th>Section</th><th>Current</th><th>Delta vs Best</th><th>Increase</th><th>Decrease</th><th>Speed</th></tr>
+<tr>
+<th>Section</th><th>Current</th><th>Delta vs Best</th>
+<th>Increase</th><th>Decrease</th><th>Speed</th><th>Delete</th>
+</tr>
 </table>
 
 <h3>Field Map (Push Back)</h3>
 <div id="fieldContainer">
-  <img id="fieldImage" src="https://upload.wikimedia.org/wikipedia/commons/2/28/VEX_Push_Back_Field.webp">
+  <img id="fieldImage" src="https://upload.wikimedia.org/wikipedia/commons/3/3f/VEX_Push_Back_Field.png">
   <canvas id="fieldCanvas" width="600" height="600"></canvas>
 </div>
 <button onclick="clearPath()">Clear Path</button>
@@ -70,7 +72,7 @@ let sections = JSON.parse(localStorage.getItem("sections")) || [
 let runs = JSON.parse(localStorage.getItem("runs")) || {};
 let startTime = null;
 let interval = null;
-let currentRun = {}; // store section index -> {time,speed}
+let currentRun = {};
 let path = JSON.parse(localStorage.getItem("path")) || [];
 
 // ---------------------------
@@ -112,7 +114,7 @@ function startSection(){
   if(startTime!==null){ alert("Timer already running!"); return; }
   startTime = performance.now();
   interval = setInterval(()=>{
-    let elapsed = (performance.now() - startTime)/1000;
+    let elapsed = (performance.now()-startTime)/1000;
     document.getElementById("timerDisplay").innerText = "Time: " + elapsed.toFixed(2) + " s";
   },50);
 }
@@ -120,7 +122,7 @@ function startSection(){
 function stopSection(){
   if(startTime===null){ alert("Click Start first!"); return; }
   clearInterval(interval);
-  let elapsed = (performance.now() - startTime)/1000;
+  let elapsed = (performance.now()-startTime)/1000;
   const idx = document.getElementById("sectionSelect").value;
   currentRun[idx] = {time: elapsed, speed: sections[idx].distance / elapsed};
   startTime = null;
@@ -130,7 +132,7 @@ function stopSection(){
 }
 
 // ---------------------------
-// Save run if all sections done
+// Save run
 // ---------------------------
 function saveRunIfComplete(){
   if(Object.keys(currentRun).length === sections.length){
@@ -143,6 +145,20 @@ function saveRunIfComplete(){
     runs[mode].push(runArray);
     localStorage.setItem("runs", JSON.stringify(runs));
     currentRun = {};
+  }
+}
+
+// ---------------------------
+// Delete section recording
+// ---------------------------
+function deleteSectionRecording(sectionIndex){
+  const mode = document.getElementById("mode").value;
+  const lastRun = (runs[mode]||[]).slice(-1)[0];
+  if(lastRun){
+    lastRun[sectionIndex] = null; // delete that section
+    runs[mode][runs[mode].length-1] = lastRun;
+    localStorage.setItem("runs", JSON.stringify(runs));
+    renderTable();
   }
 }
 
@@ -162,10 +178,10 @@ function loadData(){
 function renderTable(){
   const mode = document.getElementById("mode").value;
   const table = document.getElementById("table");
-  table.innerHTML = "<tr><th>Section</th><th>Current</th><th>Delta vs Best</th><th>Increase</th><th>Decrease</th><th>Speed</th></tr>";
+  table.innerHTML = "<tr><th>Section</th><th>Current</th><th>Delta vs Best</th><th>Increase</th><th>Decrease</th><th>Speed</th><th>Delete</th></tr>";
 
   let best = sections.map(()=>Infinity);
-  (runs[mode]||[]).forEach(run => run.forEach((s,i)=>best[i] = Math.min(best[i], s.time)));
+  (runs[mode]||[]).forEach(run => run.forEach((s,i)=>{if(s)best[i] = Math.min(best[i], s.time)}));
 
   const lastRun = (runs[mode]||[]).slice(-1)[0];
   if(!lastRun) return;
@@ -173,13 +189,20 @@ function renderTable(){
   lastRun.forEach((s,i)=>{
     let row = table.insertRow();
     row.insertCell().innerText = sections[i].name;
-    row.insertCell().innerText = s.time.toFixed(2);
-    let delta = s.time - best[i];
-    row.insertCell().innerText = delta.toFixed(2);
-    row.insertCell().innerText = i>0 ? Math.max(0, s.time - lastRun[i-1].time).toFixed(2) : "-";
-    row.insertCell().innerText = i>0 ? Math.max(0, lastRun[i-1].time - s.time).toFixed(2) : "-";
-    row.insertCell().innerText = s.speed.toFixed(2);
-    row.cells[2].className = delta<=0?"good":"bad";
+    row.insertCell().innerText = s ? s.time.toFixed(2) : "-";
+    let delta = s ? s.time - best[i] : 0;
+    row.insertCell().innerText = s ? delta.toFixed(2) : "-";
+    row.insertCell().innerText = s && i>0 ? Math.max(0, s.time - lastRun[i-1].time).toFixed(2) : "-";
+    row.insertCell().innerText = s && i>0 ? Math.max(0, lastRun[i-1].time - s.time).toFixed(2) : "-";
+    row.insertCell().innerText = s ? s.speed.toFixed(2) : "-";
+    row.cells[2].className = (s && delta<=0)?"good":(s?"bad":"");
+    // Delete button
+    let del = row.insertCell();
+    if(s){
+      del.innerHTML = `<span class="deleteBtn" onclick="deleteSectionRecording(${i})">✖</span>`;
+    } else {
+      del.innerHTML = "-";
+    }
   });
 }
 
