--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Push Back Dashboard</title>
+<title>VEX Push Back Dashboard</title>
 <style>
 body { font-family: Arial; padding: 20px; }
 input, button, select { margin: 4px; padding: 4px; }
@@ -13,16 +13,16 @@ th { background: #eee; }
 .bad { background: #f7c5c5; }
 .deleteBtn { cursor: pointer; color: red; font-weight: bold; }
 #fieldContainer { position: relative; width: 600px; height: 600px; margin-top: 20px; }
-#fieldImage { width: 100%; height: 100%; display:block; object-fit: contain; }
+#fieldImage { width: 100%; height: 100%; display:block; }
 #fieldCanvas { position: absolute; top:0; left:0; }
 </style>
 </head>
 <body>
 
-<h2>Push Back VEX Dashboard</h2>
+<h2>VEX Push Back Driving Analysis</h2>
 
-<label>Mode: </label>
-<select id="mode" onchange="loadData()">
+<label>Mode:</label>
+<select id="mode" onchange="renderTable()">
   <option value="driver">Driver</option>
   <option value="auton">Auton</option>
 </select>
@@ -36,7 +36,7 @@ th { background: #eee; }
 <hr>
 
 <h3>Run Control</h3>
-<label>Select Section:</label>
+<label>Section:</label>
 <select id="sectionSelect"></select>
 <button onclick="startSection()">Start</button>
 <button onclick="stopSection()">Stop</button>
@@ -57,41 +57,35 @@ th { background: #eee; }
 </tr>
 </table>
 
-<h3>Field Map (Push Back)</h3>
+<h3>Field Map</h3>
 <div id="fieldContainer">
-  <img id="fieldImage" src="https://upload.wikimedia.org/wikipedia/commons/3/36/VEX_Push_Back_Field_2025.png" alt="Push Back Field">
+  <img id="fieldImage" src="field.png">
   <canvas id="fieldCanvas" width="600" height="600"></canvas>
 </div>
 <button onclick="clearPath()">Clear Path</button>
 
 <script>
-// ---------------------------
-// Data
-// ---------------------------
+// ---------------- DATA ----------------
 let sections = JSON.parse(localStorage.getItem("sections")) || [
   {name:"Start", distance:1},
-  {name:"Approach Wall", distance:1},
-  {name:"Push Block", distance:1},
+  {name:"Push", distance:1},
   {name:"Return", distance:1}
 ];
 
-let runs = JSON.parse(localStorage.getItem("runs")) || {};
+let runs = JSON.parse(localStorage.getItem("runs")) || { driver: [], auton: [] };
+let currentRun = null;
 let startTime = null;
 let interval = null;
-let currentRun = {};
-let path = JSON.parse(localStorage.getItem("path")) || [];
 
-// ---------------------------
-// Sections UI
-// ---------------------------
+// ---------------- SECTIONS ----------------
 function saveSections(){
   localStorage.setItem("sections", JSON.stringify(sections));
   renderSections();
-  populateSectionDropdown();
+  populateDropdown();
 }
 
 function addSection(){
-  sections.push({name:"S"+(sections.length+1), distance:1});
+  sections.push({name:"New Section", distance:1});
   saveSections();
 }
 
@@ -99,13 +93,14 @@ function renderSections(){
   const div = document.getElementById("sections");
   div.innerHTML = "";
   sections.forEach((s,i)=>{
-    div.innerHTML += `Name: <input value="${s.name}" onchange="sections[${i}].name=this.value;saveSections()">
-      Distance: <input type="number" step="0.01" value="${s.distance}" onchange="sections[${i}].distance=parseFloat(this.value);saveSections()">
-      <br>`;
+    div.innerHTML += `
+      Name: <input value="${s.name}" onchange="sections[${i}].name=this.value;saveSections()">
+      Distance: <input type="number" step="0.01" value="${s.distance}"
+      onchange="sections[${i}].distance=parseFloat(this.value);saveSections()"><br>`;
   });
 }
 
-function populateSectionDropdown(){
+function populateDropdown(){
   const sel = document.getElementById("sectionSelect");
   sel.innerHTML = "";
   sections.forEach((s,i)=>{
@@ -113,151 +108,124 @@ function populateSectionDropdown(){
   });
 }
 
-// ---------------------------
-// Timing
-// ---------------------------
+// ---------------- TIMER ----------------
 function startSection(){
-  if(startTime!==null){ alert("Timer already running!"); return; }
+  if(startTime !== null) return alert("Timer already running");
+  if(!currentRun){
+    currentRun = Array(sections.length).fill(null);
+  }
   startTime = performance.now();
   interval = setInterval(()=>{
-    let elapsed = (performance.now()-startTime)/1000;
-    document.getElementById("timerDisplay").innerText = "Time: " + elapsed.toFixed(2) + " s";
+    let t = (performance.now()-startTime)/1000;
+    document.getElementById("timerDisplay").innerText = `Time: ${t.toFixed(2)} s`;
   },50);
 }
 
 function stopSection(){
-  if(startTime===null){ alert("Click Start first!"); return; }
+  if(startTime === null) return alert("Press start first");
   clearInterval(interval);
   let elapsed = (performance.now()-startTime)/1000;
-  const idx = document.getElementById("sectionSelect").value;
-  currentRun[idx] = {time: elapsed, speed: sections[idx].distance / elapsed};
   startTime = null;
   document.getElementById("timerDisplay").innerText = "Time: 0.00 s";
+
+  const idx = Number(document.getElementById("sectionSelect").value);
+  currentRun[idx] = {
+    time: elapsed,
+    speed: sections[idx].distance / elapsed
+  };
+
   saveRun();
   renderTable();
 }
 
-// ---------------------------
-// Save Run
-// ---------------------------
+// ---------------- RUN STORAGE ----------------
 function saveRun(){
   const mode = document.getElementById("mode").value;
-  runs[mode] = runs[mode] || [];
-  
-  // Create a new run if empty or previous run is complete
-  let lastRun = runs[mode].slice(-1)[0];
-  if(!lastRun || Object.keys(lastRun).length === sections.length){
-    lastRun = {};
-    runs[mode].push(lastRun);
+  let list = runs[mode];
+
+  if(!list.length || list[list.length-1].every(x=>x!==null)){
+    list.push(Array(sections.length).fill(null));
   }
-  
-  // Update current section
-  const idx = document.getElementById("sectionSelect").value;
-  lastRun[idx] = currentRun[idx];
-  
+
+  list[list.length-1] = currentRun.slice();
   localStorage.setItem("runs", JSON.stringify(runs));
 }
 
-// ---------------------------
-// Delete Section
-// ---------------------------
-function deleteSectionRecording(idx){
-  const mode = document.getElementById("mode").value;
-  const lastRun = runs[mode]?.slice(-1)[0];
-  if(lastRun && lastRun[idx]){
-    delete lastRun[idx];
-    localStorage.setItem("runs", JSON.stringify(runs));
-    renderTable();
-  }
-}
-
-// ---------------------------
-// Load Data
-// ---------------------------
-function loadData(){
-  runs = JSON.parse(localStorage.getItem("runs")) || {};
-  currentRun = {};
-  renderTable();
-  drawPath();
-}
-
-// ---------------------------
-// Table Rendering
-// ---------------------------
+// ---------------- TABLE ----------------
 function renderTable(){
   const mode = document.getElementById("mode").value;
   const table = document.getElementById("table");
-  table.innerHTML = "<tr><th>Section</th><th>Current</th><th>Best</th><th>Delta vs Best</th><th>Increase</th><th>Decrease</th><th>Speed</th><th>Delete</th></tr>";
+  table.innerHTML = `
+  <tr>
+  <th>Section</th><th>Current</th><th>Best</th>
+  <th>Delta vs Best</th><th>Increase</th><th>Decrease</th>
+  <th>Speed</th><th>Delete</th>
+  </tr>`;
 
-  let best = sections.map(()=>Infinity);
-  (runs[mode]||[]).forEach(run => run.forEach((s,i)=>{if(s)best[i] = Math.min(best[i], s.time)}));
+  const allRuns = runs[mode];
+  if(!allRuns.length) return;
 
-  const lastRun = (runs[mode]||[]).slice(-1)[0];
-  if(!lastRun) return;
+  let best = sections.map((_,i)=>{
+    let times = allRuns.map(r=>r[i]?.time).filter(t=>t!==undefined);
+    return times.length ? Math.min(...times) : 0;
+  });
 
-  lastRun.forEach((s,i)=>{
+  let last = allRuns[allRuns.length-1];
+
+  last.forEach((s,i)=>{
     let row = table.insertRow();
     row.insertCell().innerText = sections[i].name;
     row.insertCell().innerText = s ? s.time.toFixed(2) : "-";
-    row.insertCell().innerText = best[i] !== Infinity ? best[i].toFixed(2) : "-"; // Best column
+    row.insertCell().innerText = best[i].toFixed(2);
     let delta = s ? s.time - best[i] : 0;
     row.insertCell().innerText = s ? delta.toFixed(2) : "-";
-    row.insertCell().innerText = s && i>0 ? Math.max(0, s.time - lastRun[i-1]?.time || 0).toFixed(2) : "-";
-    row.insertCell().innerText = s && i>0 ? Math.max(0, lastRun[i-1]?.time - s.time || 0).toFixed(2) : "-";
+    row.insertCell().innerText = (i>0 && s && last[i-1]) ? Math.max(0, s.time-last[i-1].time).toFixed(2) : "-";
+    row.insertCell().innerText = (i>0 && s && last[i-1]) ? Math.max(0, last[i-1].time-s.time).toFixed(2) : "-";
     row.insertCell().innerText = s ? s.speed.toFixed(2) : "-";
-    row.cells[3].className = (s && delta<=0)?"good":(s?"bad":"");
-
-    // Delete button
-    let del = row.insertCell();
-    del.innerHTML = s ? `<span class="deleteBtn" onclick="deleteSectionRecording(${i})">✖</span>` : "-";
+    row.insertCell().innerHTML = s ? `<span class="deleteBtn" onclick="deleteSection(${i})">✖</span>` : "-";
+    if(s) row.cells[3].className = delta<=0 ? "good" : "bad";
   });
 }
 
-// ---------------------------
-// Field Path
-// ---------------------------
+function deleteSection(i){
+  const mode = document.getElementById("mode").value;
+  let last = runs[mode][runs[mode].length-1];
+  last[i] = null;
+  localStorage.setItem("runs", JSON.stringify(runs));
+  renderTable();
+}
+
+// ---------------- FIELD DRAW ----------------
 const canvas = document.getElementById("fieldCanvas");
 const ctx = canvas.getContext("2d");
+let path = JSON.parse(localStorage.getItem("path")) || [];
 let drawing=false;
 
-canvas.addEventListener("mousedown", e=>{drawing=true; addPoint(e);});
-canvas.addEventListener("mousemove", e=>{if(drawing)addPoint(e);});
-canvas.addEventListener("mouseup", e=>{drawing=false; savePath();});
-canvas.addEventListener("mouseleave", e=>{drawing=false; savePath();});
+canvas.onmousedown=e=>{drawing=true;addPoint(e)};
+canvas.onmousemove=e=>drawing&&addPoint(e);
+canvas.onmouseup=()=>{drawing=false;savePath()};
+canvas.onmouseleave=()=>{drawing=false;savePath()};
 
 function addPoint(e){
-  const rect = canvas.getBoundingClientRect();
-  const x = e.clientX - rect.left;
-  const y = e.clientY - rect.top;
-  path.push({x,y});
+  const r=canvas.getBoundingClientRect();
+  path.push({x:e.clientX-r.left,y:e.clientY-r.top});
   drawPath();
 }
-
 function drawPath(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  ctx.strokeStyle="blue";
-  ctx.lineWidth=3;
+  ctx.clearRect(0,0,600,600);
+  ctx.strokeStyle="blue"; ctx.lineWidth=3;
   ctx.beginPath();
-  path.forEach((p,i)=>{if(i===0)ctx.moveTo(p.x,p.y);else ctx.lineTo(p.x,p.y);});
+  path.forEach((p,i)=>i?ctx.lineTo(p.x,p.y):ctx.moveTo(p.x,p.y));
   ctx.stroke();
 }
+function savePath(){localStorage.setItem("path",JSON.stringify(path))}
+function clearPath(){path=[];drawPath();savePath()}
 
-function clearPath(){
-  path=[];
-  drawPath();
-  localStorage.setItem("path",JSON.stringify(path));
-}
-
-function savePath(){
-  localStorage.setItem("path",JSON.stringify(path));
-}
-
-// ---------------------------
-// Init
-// ---------------------------
+// ---------------- INIT ----------------
 renderSections();
-populateSectionDropdown();
-loadData();
+populateDropdown();
+renderTable();
+drawPath();
 </script>
 
 </body>
