--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ th { background: #eee; }
 
 <h3>Field Map</h3>
 <div id="fieldContainer">
-  <img id="fieldImage" src="field.png">
+  <img id="fieldImage" src="Field.png">
   <canvas id="fieldCanvas" width="600" height="600"></canvas>
 </div>
 <button onclick="clearPath()">Clear Path</button>
